--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,9 @@
 
   nav { background-image: url("Car.jpg");
     background-size: cover;
+    height: 130px;
+    width: 1500px;
+    margin-top: -15px;
   }
 
   .bg-img { background-image: url("Car.jpg");
@@ -14,6 +17,7 @@
   width: 100%;
   height: 100%;
   background-size: cover;
+  margin-top: -15px;
   
 
   }
@@ -29,6 +33,7 @@
  
 
   #location {
+      padding: 20px;
     border-top-left-radius: 50px;
     border-bottom-left-radius: 50px;
     height: 65px;
@@ -39,21 +44,27 @@
     font-size: 24px;
     line-height: 30px;
     color: #000000;
+    border:0px solid;
   }
 
   #first_date {
-    height: 65px;
+    padding: 20px;
+    height: 45px;
     width: 200px;
     font-family: Abyssinica SIL;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
     line-height: 30px;
-    
+    border-top:0px solid;
+    border-bottom:0px solid;
+    border-left:1px solid grey;
+    border-right:1px solid grey;
     color: #000000;
   }
 
-  #second_date {
+  #last_date {
+    padding: 0px;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
     height: 65px;
@@ -65,6 +76,12 @@
     line-height: 30px;
     
     color: #000000;
+    display:flex;
+    input {
+        width:150px;
+        border:0px solid ;
+
+    }
   }
   
 
@@ -78,25 +95,17 @@
     background: #FFFFFF;
     border-radius: 50px;
    
+   
 }
   .button {
     
-    width: 52px;
-    height: 52px;
+    width: 60px;
+    height: 60px;
     left: 793px;
     top: 117px;
     
     background: #34BECD;
   }
-
-
-  /*Font Color*/
-$button-buy-font-color:#2c2b2b;
-$button-try-font-color:#2c2b2b;
-
-/*Font Color - Hover*/
-$button-buy-font-color-hover:#2c2b2b;
-$button-try-font-color-hover:#2c2b2b;
 
 html, body, div, span {
     border: 0 none;
@@ -118,26 +127,7 @@ a:hover {
     color: #ffffff;
 }
 
-/*
-section.section_button {
-    overflow: auto;
-    padding: 0 !important;
-}
-.buttons.button_center {
-    float: none;
-    margin: 0 auto;
-}
-.buttons.button_external {
-    display: block;
-    margin: 15px auto;
-}
-.section_button .buttons.button_right {
-    float: right;
-}
-.section_button .buttons.button_left {
-    float: left;
-}
-*/
+
 
 .buttons span {
     background: #34becd;
@@ -152,66 +142,12 @@ section.section_button {
     height: 52px;
     margin: 10px 0 0 -16px;
     padding: 8px 0 0;
-    position: relative;
+    position: fixed;
     text-align: center;
     width: 52px;
     z-index: 99;
     left: 700px;
-    top: 117px;
-}
-
-a.button_buy {
-    background: rgba(0, 0, 0, 0) ;
-    border-bottom-left-radius: 25px;
-    border-top-left-radius: 25px;
-    box-shadow: 0 2px 0 rgba(255, 255, 255, 0.5) inset;
-    color: $button-buy-font-color;
-    display: block;
-    float: left;
-    font-size: 135%;
-    font-weight: bold;
-    height: 51px;
-    padding: 15px 0 0;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-
-    width: 177px;
-    z-index: 20;
-}
-a.button_buy:hover {
-    background: rgba(0, 0, 0, 0) ;
-    color: $button-buy-font-color-hover;
-}
-a.button_try {
-    background: rgba(0, 0, 0, 0) ;
-    border-bottom-right-radius: 25px;
-    border-top-right-radius: 25px;
-    box-shadow: 0 2px 0 rgba(255, 255, 255, 0.5) inset;
-    color:   $button-try-font-color;
-    display: block;
-    float: left;
-    font-size: 135%;
-    font-weight: bold;
-    height: 51px;
-    margin-left: -16px;
-    padding: 15px 0 0;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    
-    width: 177px;
-    z-index: 20;
-}
-a.button_try:hover {
-    background: rgba(0, 0, 0, 0) ;
-    
-    color: $button-try-font-color-hover;
-}
-
-a.button_buy:activea.button_try:active:active, input.submit:active {
-    box-shadow: 0 -2px 0 rgba(255, 255, 255, 0.4) inset;
-    outline: medium none;
+    top: 150px;
 }
 
 
@@ -233,28 +169,6 @@ a.button_buy:activea.button_try:active:active, input.submit:active {
    
 }
 
-
-
-.avatar_container {
-position: fixed;
-width: 135px;
-height: 62px;
-left: 1300px;
-top: 21px;
-
-background: #FFFFFF;
-border-radius: 50px;
-}
-
-
-
-.dropdown {
-position: fixed;
-width: 37px;
-height: 43px;
-top: 30px;
-
-}
 
 .rounded-circle {
 position: fixed;
@@ -308,3 +222,60 @@ left: 1380px;
 top: 30px;
 position: fixed;
 }
+
+
+.dropdown-field {
+
+        background-image:
+          linear-gradient(45deg, transparent 50%, white),
+          linear-gradient(135deg, white, transparent 50%),
+          linear-gradient(to right, #34becd, #34becd);
+        background-position:
+          calc(100% - 20px) calc(1em + 2px),
+          calc(100% - 15px) calc(1em + 2px),
+          100% 0;
+        background-size:
+          5px 5px,
+          5px 5px,
+          2.5em 2.5em;
+        background-repeat: no-repeat;
+        top:30px;
+        height:40px;
+        left: 1150px;
+        position:fixed
+}
+
+
+      select {
+
+        /* styling */
+        background-color: white ;
+        border: thin solid grey;
+        border-radius: 10px;
+        display: inline-block;
+        font: inherit;
+        line-height: 1.5em;
+        padding: 0.5em 3.5em 0.5em 1em;
+      
+        /* reset */
+      
+        -webkit-appearance: none;
+      }
+
+      .nav-buttons {
+        position: sticky;
+        width: 600px;
+        height: 65px;
+        left: 400px;
+        top: 20px;
+        
+        background: #FFFFFF;
+        border-radius: 50px;
+       
+    }
+
+
+    .nav-search-form-control {
+        border: 1px solid grey;
+        border-radius: 50px;
+    }
