--- a/app/views/pages/navbar.html.erb
+++ b/app/views/pages/navbar.html.erb
@@ -1,41 +1,46 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
   <a class="home-button" href="#">
   <%= image_tag("logo.png", class: "rounded-circle") %>
-  <img src="" class="rounded-circle" width="30" height="30" alt="" loading="lazy">
+ 
   CARCNC</a>
 
-  <form novalidate="novalidate" class="form-inline my-2 my-lg-0"action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
-  <div class="search-form-control form-group">
-  <input class="form-control" type="search" placeholder="Location" aria-label="Search">
-  <input type="dates" aria-label="Dates" placeholder="Dates" class="form-control">
+
+  <div class="nav-buttons">
+  <form novalidate="novalidate" class="form-inline" action="/" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+  <div class="nav-search-form-control form-group">
+  <input id="location" type="search" placeholder="Location" aria-label="Search">
+  <input type="dates" aria-label="Dates" placeholder="First date" id="first_date">
+    <div id="last_date" >
+  <input type="dates" aria-label="Dates" placeholder="Last date" >
 
     <button name="button" type="submit" class="btn btn-flat">
-      <i class="fas fa-search"></i> 
+      <i class="fas fa-search">
+      </i> 
     </button>
+    </div>
   </div>
 </form>
-
-<div class="avatar_container" class="form-inline">
-<div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-  <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-    <button class="dropdown-item" type="button">My profile</button>
-    <button class="dropdown-item" type="button">Messages</button>
-    <button class="dropdown-item" type="button">Notifications</button>
-    <button class="dropdown-item" type="button">Saved cars</button>
-    <button class="dropdown-item" type="button">Add a new offer</button>
-    <button class="dropdown-item" type="button">Share my experience</button>
-    <button class="dropdown-item" type="button">Help</button>
-    <button class="dropdown-item" type="button">Log out</button>
-  </div>
 </div>
 
-<img class="avatar" alt="avatar" src="https://kitt.lewagon.com/placeholder/users/cveneziani" />
-</div>
 
+
+
+<select name="cars" class="dropdown-field">
+  
+  <option value="volvo" >Navigation</option>
+  <option value="saab">My profile</option>
+  <option value="opel">Messages</option>
+  <option value="audi">Notifications</option>
+  <option value="volvo">Saved cars</option>
+  <option value="saab">Add a new offer</option>
+  <option value="opel">Share my experience</option>
+  <option value="audi">Help</option>
+  <option value="audi">Log out</option>
+  </select>
+
+<%= image_tag("avatar.png", class: "avatar") %>
 
 
 </nav>
