--- a/app/views/bookings/dashboard.html.erb
+++ b/app/views/bookings/dashboard.html.erb
@@ -1,27 +1,30 @@
 <div class="container">
 <div class="bg-blue">
-      <div class="container p-3">
         <div class="row">
           <div class="col-md-8">
             <h3>Your inquiries</h3>
             <p>You can chat with CARCNCers via the platform</p>
           </div>
         </div>
-      </div>
+
 </div>
+<div class="row"> <% @other_people_requests.each do |booking| %>
+
 <div class="notification">
-        <img src='https://kitt.lewagon.com/placeholder/users/cveneziani' class="avatar-large" />
+
+    <img src='https://kitt.lewagon.com/placeholder/users/cveneziani' class="avatar-large" />
         <div class="notification-content">
           <p><small>Sep 1st</small></p>
           <p class="text-success">Your <strong> car </strong> has been requested for a booking  was sent to the owner. You will receive a confirmation by email when your request is accepted.</p>
 
-        <% @other_people_requests.each do |booking| %>
         <div class="notification-actions">
           <%= link_to "Accept", accept_path(booking), class: "btn btn-primary", method: :patch %>
           <%= link_to "Reject", reject_path(booking), class: "btn btn-secondary", method: :patch %>
         </div>
-        <% end %>
          </div>
+
+</div>
+<% end %>
 </div>
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
